<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    android:gravity="top">
    <!-- Logo or Title -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:src="@mipmap/launcher_foreground" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:background="@drawable/rounded_edittext">

        <!--   Title    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <!-- Email Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textColor="#3B3B3B"
            android:textSize="18sp"
            android:layout_marginBottom="6dp" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/registerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_email"
            android:autofillHints="john@gmail.com"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="16dp"
            android:textColor="#333333"
            android:textColorHint="#9E9E9E" />

        <!-- Password Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_pass"
            android:textColor="#3B3B3B"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"/>

        <!-- Password Field -->
        <EditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_pass"
            android:autofillHints="*****"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="16dp"
            android:textColor="#333333"
            android:textColorHint="#9E9E9E" />

        <!-- Confirm Password Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_confirm_pass"
            android:textColor="#3B3B3B"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"/>

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/registerConfirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_pass_again"
            android:autofillHints="*****"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="16dp"
            android:textColor="#333333"
            android:textColorHint="#9E9E9E" />

        <!-- Signup Button -->
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1D61E7"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium" />

        <!-- Sign Up -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_acc"
                android:textColor="#9E9E9E"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#1D61E7"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
